
15.SOLR-1001: Allow variables in various attributes of RegexTransformer, HTMLStripTransformer
              and NumberFormatTransformer.
              (Fergus McMenemie, Noble Paul, shalin)

16.SOLR-989:  Expose running statistics from the Context API.
              (Noble Paul, shalin)

17.SOLR-996:  Expose Context to Evaluators.
              (Noble Paul, shalin)

Optimizations
----------------------
1. SOLR-846:  Reduce memory consumption during delta import by removing keys when used
              (Ricky Leung, Noble Paul via shalin)

2. SOLR-974:  DataImportHandler skips commit if no data has been updated.
              (Wojtek Piaseczny, shalin)

3. SOLR-1004: Check for abort more frequently during delta-imports.
              (Marc Sturlese, shalin)

Bug Fixes
----------------------
1. SOLR-800:  Deep copy collections to avoid ConcurrentModificationException in XPathEntityprocessor while streaming
              (Kyle Morrison, Noble Paul via shalin)

2. SOLR-823:  Request parameter variables ${dataimporter.request.xxx} are not resolved
              (Mck SembWever, Noble Paul, shalin)

3. SOLR-728:  Add synchronization to avoid race condition of multiple imports working concurrently
              (Walter Ferrara, shalin)

4. SOLR-742:  Add ability to create dynamic fields with custom DataImportHandler transformers
              (Wojtek Piaseczny, Noble Paul, shalin)

5. SOLR-832:  Rows parameter is not honored in non-debug mode and can abort a running import in debug mode.
              (Akshay Ukey, shalin)

6. SOLR-838:  The VariableResolver obtained from a DataSource's context does not have current data.
              (Noble Paul via shalin)

7. SOLR-864:  DataImportHandler does not catch and log Errors (shalin)

8. SOLR-873:  Fix case-sensitive field names and columns (Jon Baer, shalin)

9. SOLR-893:  Unable to delete documents via SQL and deletedPkQuery with deltaimport
              (Dan Rosher via shalin)
